--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ZKXwkRfYXkMIddLZbGoZYBFeop9t0pw7nU+zZvhaUEE=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://larabbs.local
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=larabbs
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
@@ -23,16 +23,18 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.qq.com
+MAIL_PORT=25
+MAIL_USERNAME=530449639@qq.com
+MAIL_PASSWORD=kuktvuqvvtumbije
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=530449639@qq.com
+MAIL_FROM_NAME=大咖
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
-BAIDU_TRANSLATE_APPID=
-BAIDU_TRANSLATE_KEY=
+BAIDU_TRANSLATE_APPID=20180122000117650
+BAIDU_TRANSLATE_KEY=Yg4Vs7VGLE4p5CCU_Tba
